# so-vits-svc

./: .gitignore  .ruff.toml  CONTRIBUTING.md  Dockerfile  Eng_docs.md  LICENSE  README.md  README_CN.md  README_zh_CN.md  add_speaker.py  app.py  attentions.py  commons.py  compress_model.py  data_utils.py  docker-compose.yaml  export_index_for_onnx.py  flask_api.py  flask_api_full_song.py  gui.py  gui_i18.py  inference.ipynb  inference.py  inference_main.py  losses.py  mel_processing.py  model_onnx.py  model_onnx_48k.py  models.py  modules.py  onnx_export.py  onnx_export_speaker_mix.py  preprocess.py  preprocess_flist_config.py  preprocess_hubert_f0.py  preprocess_wave.py  pyproject.toml  requirements.txt  requirements_onnx_encoder.txt  requirements_win.txt  (+15 more)
.github/: no-response.yml
CppDataProcess/: F0Preprocess.cpp  F0Preprocess.hpp  Slicer.hpp  Wav.cpp  Wav.hpp  readme.md
cluster/: __init__.py  km_train.py  kmeans.py  train_cluster.py
configs/: config.json  diffusion.yaml  nyarumul.json  nyarusing.json
configs_template/: config_template.json  config_tiny_template.json  diffusion_template.yaml
configs_template_16k/: config_template.json  diffusion_template.yaml
dataset_raw/: wav_structure.txt
diffusion/: data_loaders.py  diffusion.py  diffusion_onnx.py  dpm_solver_pytorch.py  how to export onnx.md  infer_gt_mel.py  onnx_export.py  solver.py  uni_pc.py  unit2mel.py  vocoder.py  wavenet.py
doc/: README_CN.md
edgetts/: tts.py  tts_voices.py
filelists/: test.txt  train.txt  val.txt
harmof0/: __init__.py  layers.py  main.py  network.py  pitch_tracker.py
hubert/: hubert_model.py  hubert_model_onnx.py
inference/: inferPreprocess.hpp  infer_tool.py  infer_tool_grad.py  slicer.py
log/: __init__.py
logger/: __init__.py
modules/: DSConv.py  attentions.py  audio.py  commons.py  crepe.py  ddsp.py  enhancer.py  losses.py  mel_processing.py  modules.py  stft.py
onnx/: model_onnx.py  model_onnx_48k.py  onnx_export_48k.py
onnxexport/: model_onnx.py  (+1 more)
text/: symbols.py  (+2 more)
(+155 files in other folders)
