[tool.poetry]
name = "sovitssvc"
version = "0.1.0"
description = "so vits svc for jsut train"
#license = "MIT"
authors = ["Kai Washizaki"]
maintainers = ["washizaki kai <bandad.kw@gmail.com>"]
readme = "README.md"
keywords = [
    "Python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    #"License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fugashi = "^1.2.1"
fairseq = "0.12.2"
gdown = "^4.7.1"
ginza = "^5.1.2"
hydra-core = "^1.3.1"
ja-ginza = "^5.1.2"
jaconv = "^0.3.4"
japanize-matplotlib = "^1.1.3"
joblib = "^1.2.0"
librosa = "^0.9.2"
numpy = "1.23.5"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
pyopenjtalk = "^0.3.0"
python-dotenv = "^1.0.0"
pytorch-lightning = "^2.0.2"
scikit-learn = "^1.2.1"
scipy = "^1.10.0"
seaborn = "^0.12.2"
soundfile = "0.12.1"
sox = "^1.4.1"
spacy = "^3.4.4"
SudachiPy = "^0.6.6"
tensorboard = "^2.13.0"
timm = "^0.9.2"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torchmetrics = "^0.11.1"
tqdm = "^4.65.0"
transformers = "^4.29.2"
wasabi = "~0.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=^1.0.0"]
build-backend = "poetry.core.masonry.api"